Fine Main Inizio Footer

--- a/index.html
+++ b/index.html
@@ -309,6 +309,71 @@
                 </div>
             </div>
         </section>
+
+        <!-- About Us -->
+        <section>
+            <div class="container about-us">
+                <h2>
+                    About Us
+                </h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi suscipit accusantium cum perspiciatis sunt id architecto enim. Voluptatibus fugit voluptas dolore molestiae quos suscipit perferendis quasi quis, tempora rerum, sapiente et, repellendus sequi vitae. Accusantium, perferendis. Recusandae facilis labore dolores, temporibus unde cupiditate voluptate nesciunt optio cum eveniet quaerat distinctio.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam impedit eveniet error minus accusantium assumenda! Nisi dolorem molestiae ipsum nobis nostrum ratione totam voluptatum vel vitae quae sed, fugiat officia reprehenderit facere, consectetur illo rem?
+                </p>
+
+                <div class="contact">
+                    <div class="contact-div">
+                        <img class = "contact-img" src="img/about.jpg" alt="">
+                        <i class="fa-solid fa-quote-left"></i>
+                    </div>
+
+                    <h2>
+                        I help companies tincidunt tortor aliquam nulla facili cras fermentum odio
+                    </h2>
+
+                    <span class = "secondary-bg">
+                        <i class="fa-brands fa-linkedin"></i>
+                        Find me on linkedin
+                    </span>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Get Started -->
+
+        <section>
+            <div class="container get-started secondary-bg">
+                <h4>
+                    GET STARTED
+                </h4>
+                <h3>
+                    Simple, Transparent Pricing
+                </h3>
+                <h2>
+                    It's Free!
+                </h2>
+
+                <p>
+                    We're still in beta and we will for awhile.
+                    As we add more functionality, we'll look into other plans with more controls.
+                </p>
+
+                <button class = "get-button">Get Started</button>
+                <span>
+                    Copyright 2021
+                    <i class="fa-solid fa-circle" style="color: #ffffff;"></i>
+                    Classe XX
+                    <i class="fa-solid fa-circle" style="color: #ffffff;"></i>
+                    <a href="">Privacy policy</a>
+                </span>
+
+            </div>
+            
+        </section>
+
     </main>
 
 
