--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <section>
             <div class="container testimonials">
                 <h3>
-                    Testimonials
+                    TESTIMONIALS
                 </h3>
                 <h2>
                     We are committed expert partners
@@ -343,7 +343,6 @@
         </section>
 
         <!-- Get Started -->
-
         <section>
             <div class="container get-started secondary-bg">
                 <h4>
@@ -376,6 +375,18 @@
 
     </main>
 
+    <footer>
+        <div class="container">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A id voluptatem ab eos eaque commodi dolor!
+            </p>
+
+            <p>
+                <a href="">Lorem ipsum</a> dolor sit amet.
+            </p>
+            <a href="">Boolean careers</a>
+        </div>
+    </footer>
 
 </body>
 </html>
